--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "remove.bg": "^1.3.0",
     "request": "^2.81.0",
     "spinnies": "^0.5.1",
-    "tiktok-scraper": "^1.4.7"
+    /"tiktok-scraper": "^1.4.7"/
   },
   "devDependencies": {},
   "repository": {
