--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "node-fetch": "^2.6.1",
     "remove.bg": "^1.3.0",
     "request": "^2.81.0",
-    "spinnies": "^0.5.1",
-    
+    "spinnies": "^0.5.1"
   },
   "devDependencies": {},
   "repository": {
