--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "cfonts": "^2.9.0",
+    "fb-video-downloader": "^1.0.3",
+    "scraper-instagram": "^1.0.17",
     "escape-string-regexp": "^4.0.0",
     "fake-useragent": "^1.0.1",
     "fluent-ffmpeg": "^2.1.2",
