--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cfonts": "^2.9.0",
     "fb-video-downloader": "^1.0.3",
     "scraper-instagram": "^1.0.17",
+    "insta-fetcher": "^1.2.3",
     "escape-string-regexp": "^4.0.0",
     "fake-useragent": "^1.0.1",
     "fluent-ffmpeg": "^2.1.2",
