--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Shan",
   "license": "ISC",
   "dependencies": {
+    "type": "module",
     "@adiwajshing/baileys": "^4.1.0",
     "@kagchi/kag-api": "^2.0.0",
     "async": "^3.2.1",
