--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "author": "Shan",
   "license": "ISC",
   "dependencies": {
-    "type": "module",
-    "@adiwajshing/baileys": "^4.4.0",
+    "@adiwajshing/baileys": "github:adiwajshing/baileys",
     "@kagchi/kag-api": "^2.0.0",
     "async": "^3.2.1",
     "axios": "^0.21.1",
